# solution-tc-noxus

./: .dockerigore  .gitignore  Dockerfile  README.md  demo.md  docker-compose.dev.yml  docker-compose.yml  logs.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.sh  start-dev.sh  start.sh  status.sh  stop.sh
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.css  App.tsx  api.ts  types.ts
src/chatbot/: ab_test_cli.py  ab_test_manager.py  config_cli.py  config_manager.py  config_schemas.py  feedback_analytics.py  feedback_cli.py  init_db.py  knowledge_cli.py  main.py  run_server.py
src/chatbot/api/: app.py  models.py  routes.py
src/chatbot/db/: database.py  models.py
src/chatbot/knowledge/: manager.py
tests/: conftest.py  test_all_endpoints.py  test_feedback_analytics.py
tests/api/: test_routes.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_config_manager.py  test_feedback_analytics.py  test_models.py
